Bug 460156 -  bring back the old behavior of range.isPointInRange(), r=surkov, sr=sicking